--- a/Microblog/WebRoot/index.html
+++ b/Microblog/WebRoot/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="third-party/hyMicroblog.js"></script> 
 </head>
 <body>
-<div id="myEditor"></div>
+<div id="myEditor">111</div>
 <script type="text/javascript">
 	$("#myEditor").hyMicroblog();
 </script>
